Fix others issues about issue #81

--- a/client/src/pages/contact-page/contact-page.html
+++ b/client/src/pages/contact-page/contact-page.html
@@ -7,7 +7,7 @@
 <ion-content>
   <ion-list>
     <ion-list-header class="contact-page-content">Team di sviluppo</ion-list-header>
-    
+
     <!-- FILIPPO LANUBILE -->
     <ion-card>
       <ion-item>
@@ -20,13 +20,13 @@
 
       <ion-row>
         <ion-col>
-          <button primary clear small>
+          <button ion-button clear small icon-start>
             <ion-icon name="logo-facebook"></ion-icon>
             <div><a href="https://www.facebook.com/lanubile" target=”_blank”>Facebook</a></div>
           </button>
         </ion-col>
         <ion-col>
-          <button primary clear small>
+          <button ion-button clear small icon-start>
             <ion-icon name="at"></ion-icon>
             <div><a href="mailto:filippo.lanubile@uniba.it">filippo.lanubile@uniba.it</a></div>
           </button>
@@ -46,13 +46,13 @@
 
       <ion-row>
         <ion-col>
-          <button primary clear small>
+          <button ion-button clear small icon-start>
             <ion-icon name="logo-facebook"></ion-icon>
             <div><a href="https://www.facebook.com/fabrizio.lippolis" target=”_blank”>Facebook</a></div>
           </button>
         </ion-col>
         <ion-col>
-          <button primary clear small>
+          <button ion-button clear small icon-start>
             <ion-icon name="at"></ion-icon>
             <div><a href="mailto:fabrizio.lippolis@informaticisenzafrontiere.org">fabrizio.lippolis@informaticisenzafrontiere.org</a></div>
           </button>
@@ -72,13 +72,13 @@
 
       <ion-row>
         <ion-col>
-          <button primary clear small>
+          <button ion-button clear small icon-start>
             <ion-icon name="logo-facebook"></ion-icon>
             <div><a href="https://www.facebook.com/PeppeFeniX" target=”_blank”>Facebook</a></div>
           </button>
         </ion-col>
         <ion-col>
-          <button primary clear small>
+          <button ion-button clear small icon-start>
             <ion-icon name="at"></ion-icon>
             <div><a href="mailto:pepponefx@gmail.com">pepponefx@gmail.com</a></div>
           </button>
@@ -98,13 +98,13 @@
 
       <ion-row>
         <ion-col>
-          <button primary clear small>
+          <button ion-button clear small icon-start>
             <ion-icon name="logo-facebook"></ion-icon>
             <div><a href="https://www.facebook.com/fabio.calefato" target=”_blank”>Facebook</a></div>
           </button>
         </ion-col>
         <ion-col>
-          <button primary clear small>
+          <button ion-button clear small icon-start>
             <ion-icon name="at"></ion-icon>
             <div><a href="mailto:fabio.calefato@uniba.it">fabio.calefato@uniba.it</a></div>
           </button>
