--- a/client/src/pages/home-page/home-page.html
+++ b/client/src/pages/home-page/home-page.html
@@ -1,5 +1,5 @@
-<ion-header>  
-<ion-navbar>
+<ion-header>
+  <ion-navbar>
 
   </ion-navbar>
 </ion-header>
@@ -81,7 +81,7 @@
                             {{event.title}} (@{{event.location}})
                         </ion-title>
                         <ion-buttons end>
-                            <button *ngIf="event.status=='ongoing'" (click)="openEvent(event)">
+                            <button ion-button icon-start *ngIf="event.status=='ongoing'" (click)="openEvent(event)">
                                 <ion-icon name="play"> </ion-icon>
                             </button>
                         </ion-buttons>
@@ -130,7 +130,7 @@
                             {{event.title}} (@{{event.location}})
                         </ion-title>
                         <ion-buttons end>
-                            <button *ngIf="event.status=='ongoing'" (click)="openEvent(event)">
+                            <button ion-button icon-start *ngIf="event.status=='ongoing'" (click)="openEvent(event)">
                                 <ion-icon name="play"> </ion-icon>
                             </button>
                         </ion-buttons>
@@ -185,22 +185,22 @@
         </ion-card-header>
         <ion-card-content>
           <p>
-            <ion-icon *ngIf="!event.expanded" name="arrow-dropdown" (click)="event.expanded=!event.expanded"></ion-icon> 
-            <ion-icon *ngIf="event.expanded" name="arrow-dropup" (click)="event.expanded=!event.expanded"></ion-icon> 
-            Sessioni 
+            <ion-icon *ngIf="!event.expanded" name="arrow-dropdown" (click)="event.expanded=!event.expanded"></ion-icon>
+            <ion-icon *ngIf="event.expanded" name="arrow-dropup" (click)="event.expanded=!event.expanded"></ion-icon>
+            Sessioni
           </p>
           <ion-list *ngIf="event.expanded">
             <ion-item text-wrap *ngFor="let session of event.sessions">
               <p>
-                <ion-icon *ngIf="!session.expanded" name="arrow-dropdown" (click)="session.expanded=!session.expanded"></ion-icon> 
-                <ion-icon *ngIf="session.expanded" name="arrow-dropup" (click)="session.expanded=!session.expanded"></ion-icon> 
+                <ion-icon *ngIf="!session.expanded" name="arrow-dropdown" (click)="session.expanded=!session.expanded"></ion-icon>
+                <ion-icon *ngIf="session.expanded" name="arrow-dropup" (click)="session.expanded=!session.expanded"></ion-icon>
                   {{session.title}} - {{formatDate(session.startDate)}}
               </p>
               <ion-list *ngIf="session.expanded">
                 <ion-item text-wrap *ngFor="let intervent of session.intervents">
                   <p>
-                    <ion-icon *ngIf="!intervent.expanded" name="arrow-dropdown" (click)="intervent.expanded=!intervent.expanded"></ion-icon> 
-                    <ion-icon *ngIf="intervent.expanded" name="arrow-dropup" (click)="intervent.expanded=!intervent.expanded"></ion-icon> 
+                    <ion-icon *ngIf="!intervent.expanded" name="arrow-dropdown" (click)="intervent.expanded=!intervent.expanded"></ion-icon>
+                    <ion-icon *ngIf="intervent.expanded" name="arrow-dropup" (click)="intervent.expanded=!intervent.expanded"></ion-icon>
                     {{intervent.title}} - {{formatDate(intervent.date)}} --- {{intervent.status}}
                   </p>
                   <p *ngIf="intervent.expanded">
