--- a/client/src/pages/observed-events-page/observed-events-page.html
+++ b/client/src/pages/observed-events-page/observed-events-page.html
@@ -22,13 +22,13 @@
                     {{event.title}} (@{{event.location}})
                 </ion-title>
                 <ion-buttons end>
-                    <button *ngIf="event.status=='ongoing'" (click)="openEvent(event)">
+                    <button ion-button icon-start *ngIf="event.status=='ongoing'" (click)="openEvent(event)">
                         <ion-icon name="play"> </ion-icon>
                     </button>
-                    <button *ngIf="user.observedEvents.indexOf(event._id) == -1" (click)="observe(event)">
+                    <button ion-button icon-start *ngIf="user.observedEvents.indexOf(event._id) == -1" (click)="observe(event)">
                         <ion-icon name="eye"> </ion-icon>
                     </button>
-                    <button *ngIf="user.observedEvents.indexOf(event._id) != -1" (click)="unobserve(event)">
+                    <button ion-button icon-start *ngIf="user.observedEvents.indexOf(event._id) != -1" (click)="unobserve(event)">
                         <ion-icon name="eye-off"> </ion-icon>
                     </button>
                 </ion-buttons>
