--- a/client/src/pages/modals/event/event-modal.html
+++ b/client/src/pages/modals/event/event-modal.html
@@ -31,10 +31,10 @@
       </ion-item>
 
       <ion-item>
-          <button type="submit" class="btn btn-standard" [disabled]="!eventForm.valid ||
+          <button ion-button type="submit" class="btn btn-standard" [disabled]="!eventForm.valid ||
                                                                       (sd.value<now && sd.touched) ||
                                                                       (sd.value>ed.value && ed.touched)">Salva</button>
-          <button type="reset" (click)="close()">Annulla</button>
+          <button ion-button type="reset" (click)="close()">Annulla</button>
       </ion-item>
   </form>
 
