--- a/client/src/pages/session-page/session-page.html
+++ b/client/src/pages/session-page/session-page.html
@@ -9,7 +9,7 @@
                 {{session.title}}
             </ion-title>
             <ion-buttons *ngIf="!updating && session.status=='programmed'" end>
-                <button (click)="updating=!updating">
+                <button ion-button icon-start (click)="updating=!updating">
                     <ion-icon name="create"> </ion-icon>
                 </button>
             </ion-buttons>
@@ -49,12 +49,12 @@
         
         <!-- <div *ngIf="overlapError.status">La Sessione si sovrappone con "{{overlapError.session.title}}" programmata dal {{overlapError.session.startDate}} al {{overlapError.session.endDate}}</div> -->
         <ion-item>
-            <button type="submit" class="btn btn-standard" [disabled]="!sessionForm.valid ||
+            <button ion-button type="submit" class="btn btn-standard" [disabled]="!sessionForm.valid ||
                                                                         (sd.value<now && sd.touched) ||
                                                                         (sd.value>ed.value && ed.touched) ||
                                                                         ((sd.value<trunc(event.startDate) || sd.value>trunc(event.endDate)) && sd.touched) ||
                                                                         ((ed.value<trunc(event.startDate) || ed.value>trunc(event.endDate)) && ed.touched)">Salva</button>
-            <button type="reset" (click)="reset()">Annulla</button>
+            <button ion-button type="reset" (click)="reset()">Annulla</button>
         </ion-item>
     </form>
     <ion-list>
@@ -63,8 +63,8 @@
                 INTERVENTI
             </ion-title>
             <ion-buttons end>
-                <button (click)="newIntervent()">
-                <ion-icon name="add"><span *ngIf="!mobile"> Nuovo Intervento</span></ion-icon>
+                <button ion-button icon-start (click)="newIntervent()">
+                    <ion-icon name="add"><span *ngIf="!mobile"> Nuovo Intervento</span></ion-icon>
                 </button>
             </ion-buttons>    
         </ion-toolbar>
@@ -78,10 +78,10 @@
                         {{intervent.title}}
                     </ion-title>
                     <ion-buttons end>
-                        <button (click)="openIntervent(intervent)">
+                        <button ion-button icon-start (click)="openIntervent(intervent)">
                             <ion-icon name="navigate"> Apri </ion-icon>
                         </button>
-                        <button (click)="deleteIntervent(intervent)">
+                        <button ion-button icon-start (click)="deleteIntervent(intervent)">
                             <ion-icon name="trash"> </ion-icon>
                         </button>
                     </ion-buttons>
