--- a/client/src/pages/event-page/event-page.html
+++ b/client/src/pages/event-page/event-page.html
@@ -69,7 +69,7 @@
             </ion-title>
             <ion-buttons end>
                 <button ion-button icon-start (click)="newSession()">
-                    <ion-icon name="add"><span *ngIf="!mobile"> Nuova Sessione</span></ion-icon>
+                    <ion-icon name="add"><span *ngIf="!mobile">Nuova Sessione</span></ion-icon>
                 </button>
             </ion-buttons>    
         </ion-toolbar>
@@ -84,7 +84,7 @@
                     </ion-title>
                     <ion-buttons end>
                         <button ion-button icon-start (click)="openSession(session)">
-                            <ion-icon name="navigate"> Apri </ion-icon>
+                            <ion-icon name="navigate"><span>Apri</span></ion-icon>
                         </button>
                         <!--
                         <button (click)= "openSession(session)">
