--- a/client/src/pages/modals/user-update/userData-modal.html
+++ b/client/src/pages/modals/user-update/userData-modal.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
       <ion-title>
-          <ion-icon name="person"> Il Mio Profilo - {{user.username}}</ion-icon> <span *ngIf="editingPassword"> - Cambio Password</span>
+          <ion-icon name="person"><span>Il Mio Profilo - {{user.username}}</span></ion-icon> <span *ngIf="editingPassword"> - Cambio Password</span>
       </ion-title>
   </ion-toolbar>
 </ion-header>
