--- a/client/src/pages/session-page/session-page.html
+++ b/client/src/pages/session-page/session-page.html
@@ -65,7 +65,7 @@
             </ion-title>
             <ion-buttons end>
                 <button ion-button icon-start (click)="newIntervent()">
-                    <ion-icon name="add"><span *ngIf="!mobile"> Nuovo Intervento</span></ion-icon>
+                    <ion-icon name="add"><span *ngIf="!mobile">Nuovo Intervento</span></ion-icon>
                 </button>
             </ion-buttons>    
         </ion-toolbar>
@@ -80,7 +80,7 @@
                     </ion-title>
                     <ion-buttons end>
                         <button ion-button icon-start (click)="openIntervent(intervent)">
-                            <ion-icon name="navigate"> Apri </ion-icon>
+                            <ion-icon name="navigate"><span>Apri</span></ion-icon>
                         </button>
                         <button ion-button icon-start (click)="deleteIntervent(intervent)">
                             <ion-icon name="trash"> </ion-icon>
